--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,149 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            box-sizing: border-box;
+        }
+        body{
+            font-family: Arial;
+            padding: 10px;
+            background: #f1f1f1;
+        }
+        /* 头部标题 */
+        .headr{
+            text-align: center;
+            padding: 30px;
+            background-color: white;
+        }
+        .headr h1{
+            font-size: 50px;
+        }
+        /* 导航条 */
+        .topnav{
+            overflow: hidden;
+            background-color: #333;
+        }
+        .topnav a{
+            float: left;
+            display: block;
+            text-decoration: none;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 20px;
+        }
+        .topnav a:hover{
+            background-color: #ddd;
+            color: black;
+        }
+        /* 创建两列 Left column */
+        .leftcolumn{
+            float: left;
+            width: 75%;
+        }
+        /* 右侧栏 */
+        .rightcolumn{
+            float: left;
+            width: 25%;
+            background-color: #f1f1f1;
+            padding-left: 20px;
+        }
+        /* 图像部分 */
+        .fakeimg{
+            background-color: #aaa;
+            width: 100%;
+            padding: 20px;
+        }
+        /* 文章卡片效果 */
+        .card{
+            background-color: white;
+            padding: 20px;
+            margin-top: 20px;
+        }
+        /* 列后面清除浮动 */
+        .row::after{
+            content: "";
+            display: table;
+            clear: both;
+        }
+        /* 底部 */
+        .footer{
+            padding: 20px;
+            text-align: center;
+            background-color: #ddd;
+            margin-top: 20px;
+        }
+        /* 响应式布局 —— 屏幕尺寸小于800px时，两列布局改为上下布局 */
+        @media screen and (max-width: 800px){
+            .leftcolumn, .rightcolumn{
+                width: 100%;
+                padding: 0;
+            }
+        }
+        /* 响应式布局 —— 屏幕尺寸小于400px时，导航布局改为上下布局 */
+        @media screen and (max-width: 500px){
+            .topnav a{
+                float: none;
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello world!</h1> 
+    <div class="headr">
+        <h1>我的网页</h1>
+    </div>
+    <div class="topnav">
+        <a href="#">链接</a>
+        <a href="#">链接</a>
+        <a href="#">链接</a>
+        <a href="#" style="float:right">链接</a>
+    </div>
+    <div class="row">
+        <div class="leftcolumn">
+            <div class="card">
+                <h2>文章标题</h2>
+                <h5>2019 年 4月 17日</h5>
+                <div class="fakeimg" style="height: 200px;">
+                    图片
+                </div>
+                <p>文本。。。。。。。。</p>
+                <p>文本。。。。。。。。</p>
+                <p>文本。。。。。。。。</p>
+            </div>
+            <div class="card">
+                <h2>文章标题</h2>
+                <h5>2019 年 4月 17日</h5>
+                <div class="fakeimg" style="height: 200px;">
+                    图片
+                </div>
+                <p>文本。。。。。。。。</p>
+                <p>文本。。。。。。。。</p>
+                <p>文本。。。。。。。。</p>
+            </div>
+        </div>
+        <div class="rightcolumn">
+            <div class="card">
+                <h2>关于我</h2>
+                <div class="fakeimg" style="height: 100px;">
+                    图片
+                </div>
+                <p>关于我的一些信息</p>
+            </div>
+            <div class="card">
+                <h3>热门文章</h3>
+                <div class="fakeimg"><p>图片</p></div>
+                <div class="fakeimg"><p>图片</p></div>
+                <div class="fakeimg"><p>图片</p></div>
+            </div>
+            <div class="card">
+                <h3>关注我</h3>
+                <p>一些文本</p>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <h2>底部区域</h2>
+    </div>
 </body>
 </html>
