--- a/index.htm
+++ b/index.htm
@@ -94,10 +94,10 @@
 </head>
 <body>
     <div class="headr">
-        <h1>兆骞最帅</h1>
+        <h1>我的网页</h1>
     </div>
     <div class="topnav">
-        <a href="#">链接</a>
+        <a href="/tomcat113.github.io/Test_01.html">副页</a>
         <a href="#">链接</a>
         <a href="#">链接</a>
         <a href="#" style="float:right">链接</a>
