--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
     <header class="headra">
@@ -31,8 +32,36 @@
             </ul>
         </nav>
     </header>
-    <article>
+    <article class="art">
+        <div class="photoart">
+            <img class="hphoto" src="img/photo.jpg" alt="???">
+        </div>
+        <div class="topart">
+            <h3>李辉</h3>
+            <p>一个98年的程序员！目标当个Web前端设计师、网页设计师。</p>
+            <p>欢迎您，来到我的个人博客。</p>
+        </div>
+        <div class="inart">
+            <p>
+               我叫李辉，一个希望当程序员学生。2020年开始入行Web前端。
+               目前还在学习Web的一些常用框架，希望能一边工作一边累积经验，得到一些心得。
+            </p>    
+            <p>
+                我web学习的比较晚，因为大学的课程教的是Java，所以到了大二后才接触了Web前端。
+                刚接触Web的时候，都是写一些简单Html网页，和如何获取用户填写的数据，然后保存并发送到数据库里面，没有什么神奇炫酷的特效，
+                一些常见的功能。后来到了css+js的时候，突然Web就变的有意思起来了。简简单单的几段代码，就可以把网页设置的如此炫酷。
+                至此，就喜欢上了Web前端。
+            </p>
+            <p>这个博客从3月20号开始建，因为时间和个人技术，目前还不是做很的完善，许多功能都没有，只是把一些主要内容先给做好。
 
+            </p>
+            <p>
+                最后，感谢您的访问。
+            </p>
+            <p>
+                其他的内容，在做了，我先鸽几天。
+            </p>
+        </div>
     </article>
     <footer>
         
