--- a/about.html
+++ b/about.html
@@ -63,8 +63,15 @@
             </p>
         </div>
     </article>
+
     <footer>
-        
+            <div class="footer">
+                <h2>站点声明：</h2>
+                <p>该博客网站为李辉本人学习测试使用</p>
+                <p>Copyright © tomcat113.github.io All Rights Reserved.</p>
+                
+            </div>
     </footer>
+
 </body>
 </html>
