--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 一些常见的功能。后来到了css+js的时候，突然Web就变的有意思起来了。简简单单的几段代码，就可以把网页设置的如此炫酷。
                 至此，就喜欢上了Web前端。
             </p>
-            <p>这个博客从3月1号开始建，因为时间和个人技术，目前还不是做很的完善，许多功能都没有，只是把一些主要内容先给做好。
+            <p>这个博客从3月1号开始建，因为时间和个人技术，目前还许多功能都没有，只是把一些主要界面先给做好。
 
             </p>
             <p>
