--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                 最后，感谢您的访问。
             </p>
             <p>
-                其他的内容，在做了，我先鸽asdasd几天。
+                其他的内容，在做了，我先鸽几天。
             </p>
         </div>
     </article>
