--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <title>李辉的个人博客(pc端)-一个刚刚入行的前端程序员。</title>
-
+    <link rel="shortcut icon" href="./ico/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/index.css">
   </head>
