--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="./lib/bootstrap/css/bootstrap.css" rel="stylesheet">
   <!----- css ico ----->
   <link rel="stylesheet" href="./css/base.css">
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="./css/index.css">
   <link rel="shortcut icon" href="./ico/logo.ico" type="image/x-icon">
 
   <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
