--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <title>李辉的个人博客-学习测试使用</title>
 
   <!-- Bootstrap -->
-  <link href="./lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="src/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
   <!----- css ico ----->
-  <link rel="stylesheet" href="./css/base.css">
-  <link rel="stylesheet" href="./css/index.css">
-  <link rel="shortcut icon" href="./ico/logo.ico" type="image/x-icon">
+  <link rel="stylesheet" href="src/css/base.css">
+  <link rel="stylesheet" href="src/css/index.css">
+  <link rel="shortcut icon" href="src/ico/logo.ico" type="image/x-icon">
 
   <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
   <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
@@ -44,7 +44,7 @@
         <div class=" navbar-collapse collapse">
           <ul class=" nav navbar-nav navbar-right">
             <li><a class="li-active" href="./index.html">首页</a></li>
-            <li><a href="javaScript:;">学习</a></li>
+            <li><a href="public/T.html">学习</a></li>
             <li><a href="javaScript:;">趣事</a></li>
             <li><a href="javaScript:;">关于</a></li>
             <li><a href="javaScript:;">下载</a></li>
@@ -72,19 +72,19 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="./img/lbt_1.png" alt="...">
+                <img src="src/img/lbt_1.png" alt="...">
                 <div class="carousel-caption">
                   Test1
                 </div>
               </div>
               <div class="item">
-                <img src="./img/lbt_2.png" alt="...">
+                <img src="src/img/lbt_2.png" alt="...">
                 <div class="carousel-caption">
                   Test2
                 </div>
               </div>
               <div class="item">
-                <img src="./img/lbt_3.png" alt="...">
+                <img src="src/img/lbt_3.png" alt="...">
                 <div class="carousel-caption">
                   Test3
                 </div>
@@ -111,7 +111,7 @@
             <div class="rml-card-item">
               <a href="#">
                 <div>
-                  <img src="./img/lbt_1.png" alt="">
+                  <img src="src/img/lbt_1.png" alt="">
                 </div>
                 <h3>
                   <i class="card-outline"></i>
@@ -301,10 +301,10 @@
   <!-- 尾部 end -->
 
   <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-  <script src="./js/3.3.1---jquery.min.js"></script>
-  <script src="./js/index.js"></script>
+  <script src="src/js/3.3.1---jquery.min.js"></script>
+  <script src="src/js/index.js"></script>
   <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-  <script src="./lib/bootstrap/js/bootstrap.js"></script>
+  <script src="src/lib/bootstrap/js/bootstrap.js"></script>
 </body>
 
 </html>
