--- a/public/T.html
+++ b/public/T.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../src/lib/bootstrap/css/bootstrap-theme.min.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Document</title>
 </head>
@@ -22,7 +22,10 @@
         const p = document.querySelector('p');
         const button = document.querySelector('button');
         // const url = 'https://www.juhe.cn/docs/api/id/19';
-        const url = 'https://api.github.com/search/repositories?q=vu';
+        // const url = 'https://api.github.com/search/repositories?q=vu';
+        // const url = 'https://www.baifubao.com/callback?cmd=1059&callback=phone&phone=15850781443';
+        const url = 'https://api.apiopen.top/getJoke?page=1&count=2&type=video';
+
         // const axios = require('axios');
         // import axios from 'axios'
 
@@ -32,7 +35,7 @@
             axios.get(url)
                 .then(function (response) {
                     // handle success
-                    p.innerText = response.data.items[0].name+'唯一的神';
+                    p.innerText = '---' + response.data.result[0].name + '---';
                     console.log(response);
                 })
                 .catch(function (error) {
